// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity Feed matches snapshot 1`] = `
Array [
  <header>
    <div
      className="container"
    >
      <div
        className="profile"
      >
        <div
          className="profile-image"
        >
          <img
            alt="alt-image"
          />
        </div>
        <div
          className="profile-user-settings"
        >
          <h1
            className="profile-user-name"
          >
            grp3foreva
          </h1>
        </div>
      </div>
    </div>
  </header>,
  <main>
    <div
      className="container"
    >
      <div
        className="feed"
      >
        <div
          className="feedWrapper"
        >
          <div>
             
            <div>
              <table>
                <tbody />
              </table>
            </div>
            <div />
          </div>
        </div>
      </div>
    </div>
  </main>,
]
`;

exports[`App matches snapshot 1`] = `
<div
  className="App"
>
  <header
    className="navbar navbar-expand-lg navbar-light fixed-top"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/sign-in"
        onClick={[Function]}
      >
        Instaphoto
      </a>
      <div
        className="collapse navbar-collapse"
        id="navbarTogglerDemo02"
      >
        <ul
          className="navbar-nav ml-auto"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/sign-in"
              onClick={[Function]}
            >
              Login
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/sign-up"
              onClick={[Function]}
            >
              Sign up
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/userprofile"
              onClick={[Function]}
            >
              User Profile
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/activity-feed"
              onClick={[Function]}
            >
              Activity Feed
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/FriendSuggestion"
              onClick={[Function]}
            >
              Friend Suggestion
            </a>
          </li>
          <li
            className="createpost"
          >
            <a
              className="nav-link"
              href="/dragdrop"
              onClick={[Function]}
            >
              Create Post
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="/FollowingList"
              onClick={[Function]}
            >
              Following List
            </a>
          </li>
        </ul>
      </div>
    </div>
  </header>
  <div
    className="auth-wrapper"
  >
    <form
      className="auth-inner"
    >
      <div
        className="header"
      >
        <h3>
          Welcome to Instaphoto 
        </h3>
        <img
          alt="logo"
          src="https://i.ibb.co/VV3Xdf1/logo.png"
        />
      </div>
      <br />
      <div
        className="login-and-password"
      >
        <label>
          Email
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Enter email"
          type="email"
          value=""
        />
      </div>
      <div
        className="login-and-password"
      >
        <label>
          Password
        </label>
        <p>
          Forgot password?
        </p>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Enter password"
          type="password"
          value=""
        />
      </div>
      <br />
      <div
        className="d-grid"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="submit"
        >
          Sign in
        </button>
      </div>
      <p
        className="login-create-account text-right"
      >
        Don't have an account? 
        <br />
        <a
          href="#"
          onClick={[Function]}
        >
           Sign up now to join communities across the globe 
        </a>
      </p>
    </form>
  </div>
</div>
`;

exports[`Dragdrop matches snapshot 1`] = `
<div
  className="create-post_"
>
  <div
    className="create-post-content_"
  >
    <div
      className="create-post_title_"
    >
      Create a new post!
    </div>
    <form
      id="form-file-upload"
      onSubmit={[Function]}
    >
      <p>
        Create a Post Here!! 
      </p>
      <input
        name="caption"
        onChange={[Function]}
        placeholder="Enter a caption..."
        type="text"
      />
      <input
        name="postImage"
        onChange={[Function]}
        placeholder="Add a url"
        type="text"
      />
      <button
        type="submit"
      >
        Create Post
      </button>
    </form>
  </div>
</div>
`;

exports[`FriendSuggestion matches snapshot 1`] = `
Array [
  <nav
    className="home navbar navbar-expand navbar-light"
  >
    <div
      className="card card"
    >
      <div
        className="logo"
      >
        <h>
          Instaphoto 
        </h>
        <img
          alt="logo"
        />
      </div>
      <br />
      <div>
        <img
          className="card-img-top sig"
        />
        <p
          className="username"
        >
           grp3foreva
        </p>
      </div>
      <div>
        <div
          className="card-body"
        >
          <p
            className="card-text"
          >
            <div
              className="space"
            />
            <div
              className="list-group list-group-flush"
              onKeyDown={[Function]}
            >
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span>
                  Home
                </span>
              </div>
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span>
                  Create
                </span>
              </div>
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span>
                  Profile
                </span>
              </div>
            </div>
          </p>
        </div>
      </div>
      <br />
      <div
        className="suggestions"
      >
        <p
          className="suggestion-text"
        >
          Suggestions for you
        </p>
        <button
          className="show-all-btn"
        >
          See all
        </button>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
      </div>
    </div>
  </nav>,
  <div />,
  <div
    className="container-0_FriendSuggestion"
  >
    <span
      className="text-0_FriendSuggestion"
    >
      Suggested
    </span>
  </div>,
  ",",
]
`;

exports[`FriendSuggestion matches snapshot 2`] = `
Array [
  <nav
    className="home navbar navbar-expand navbar-light"
  >
    <div
      className="card card"
    >
      <div
        className="logo"
      >
        <h>
          Instaphoto 
        </h>
        <img
          alt="logo"
        />
      </div>
      <br />
      <div>
        <img
          className="card-img-top sig"
        />
        <p
          className="username"
        >
           grp3foreva
        </p>
      </div>
      <div>
        <div
          className="card-body"
        >
          <p
            className="card-text"
          >
            <div
              className="space"
            />
            <div
              className="list-group list-group-flush"
              onKeyDown={[Function]}
            >
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span>
                  Home
                </span>
              </div>
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span>
                  Create
                </span>
              </div>
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span>
                  Profile
                </span>
              </div>
            </div>
          </p>
        </div>
      </div>
      <br />
      <div
        className="suggestions"
      >
        <p
          className="suggestion-text"
        >
          Suggestions for you
        </p>
        <button
          className="show-all-btn"
        >
          See all
        </button>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
      </div>
    </div>
  </nav>,
  <div />,
  <div
    className="container-0_FriendSuggestion"
  >
    <span
      className="text-0_FriendSuggestion"
    >
      Suggested
    </span>
  </div>,
  ",",
]
`;

exports[`Login matches snapshot 1`] = `
Array [
  <div
    className="auth-wrapper"
  >
    <form
      className="auth-inner"
    >
      <div
        className="header"
      >
        <h3>
          Welcome to Instaphoto 
        </h3>
        <img
          alt="logo"
          src="https://i.ibb.co/VV3Xdf1/logo.png"
        />
      </div>
      <br />
      <div
        className="login-and-password"
      >
        <label>
          Email
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Enter email"
          type="email"
          value=""
        />
      </div>
      <div
        className="login-and-password"
      >
        <label>
          Password
        </label>
        <p>
          Forgot password?
        </p>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Enter password"
          type="password"
          value=""
        />
      </div>
      <br />
      <div
        className="d-grid"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="submit"
        >
          Sign in
        </button>
      </div>
      <p
        className="login-create-account text-right"
      >
        Don't have an account? 
        <br />
        <a
          href="#"
          onClick={[Function]}
        >
           Sign up now to join communities across the globe 
        </a>
      </p>
    </form>
  </div>,
  ",",
]
`;

exports[`SignUp matches snapshot 1`] = `
Array [
  <form
    className="auth-inner"
    onSubmit={[Function]}
  >
    <div
      className="header"
    >
      <h3>
        Welcome to Instaphoto 
      </h3>
      <img
        alt="logo"
        src="https://i.ibb.co/VV3Xdf1/logo.png"
      />
    </div>
    <br />
    <div
      className="login-and-password"
    >
      <h3>
         Signup
      </h3>
    </div>
    <div
      className="login-and-password"
    >
      <label>
        Username
      </label>
      <input
        className="form-control"
        name="username"
        onChange={[Function]}
        placeholder="Username"
        type="text"
      />
    </div>
    <div
      className="login-and-password"
    >
      <label>
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        type="email"
      />
    </div>
    <div
      className="login-and-password"
    >
      <label>
        Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        placeholder="Password (more than 8 characters)"
        type="password"
      />
    </div>
    <div
      className="login-and-password"
    >
      <label>
        Re-enter Password
      </label>
      <input
        className="form-control"
        name="confirmPassword"
        onChange={[Function]}
        placeholder="Re-enter password"
        type="password"
      />
    </div>
    <br />
    <div
      className="d-grid"
    >
      <button
        className="btn btn-primary"
        type="submit"
      >
        Finish
      </button>
    </div>
    <p
      className="forgot-password text-right"
    >
      Already registered 
      <a
        href="/sign-in"
        onClick={[Function]}
      >
        sign in?
      </a>
    </p>
  </form>,
  ",",
]
`;

exports[`UserProfile matches snapshot 1`] = `
Array [
  <nav
    className="home navbar navbar-expand navbar-light"
  >
    <div
      className="card card"
    >
      <div
        className="logo"
      >
        <h>
          Instaphoto 
        </h>
        <img
          alt="logo"
          src="https://i.ibb.co/VV3Xdf1/logo.png"
        />
      </div>
      <br />
      <div>
        <img
          className="card-img-top sig"
          src="https://i.ibb.co/bgWdsVT/grp3.png"
        />
        <p
          className="username"
        >
           grp3foreva
        </p>
      </div>
      <div>
        <div
          className="card-body"
        >
          <p
            className="card-text"
          >
            <div
              className="space"
            />
            <div
              className="list-group list-group-flush"
              onKeyDown={[Function]}
            >
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span
                  onClick={[Function]}
                >
                  Home
                </span>
              </div>
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span
                  onClick={[Function]}
                >
                  Create
                </span>
              </div>
              <div
                className="list list-group-item"
                data-rr-ui-event-key={null}
                onClick={[Function]}
              >
                <span
                  onClick={[Function]}
                >
                  Profile
                </span>
              </div>
            </div>
          </p>
        </div>
      </div>
      <br />
      <div
        className="suggestions"
      >
        <p
          className="suggestion-text"
        >
          Suggestions for you
        </p>
        <button
          className="show-all-btn"
          onClick={[Function]}
        >
          See all
        </button>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
              src="https://i.ibb.co/hDvzykn/ellipse504.jpg"
            />
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
              src="https://i.ibb.co/hDvzykn/ellipse504.jpg"
            />
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
        <div
          className="profile-card"
        >
          <div>
            <img
              alt=""
              className="other-user"
              src="https://i.ibb.co/hDvzykn/ellipse504.jpg"
            />
            <img
              alt=""
              className="other-user"
            />
          </div>
          <button
            className="action-btn"
            type="button"
          >
            <span
              className="username"
            />
            <span
              className="follow"
            >
              Follow
            </span>
          </button>
        </div>
      </div>
    </div>
  </nav>,
  <header>
    <div
      className="container"
    >
      <div
        className="profile"
      >
        <div
          className="profile-image"
        >
          <img
            alt=""
            src="https://i.ibb.co/bgWdsVT/grp3.png"
          />
        </div>
        <div
          className="profile-user-settings"
        >
          <h1
            className="profile-user-name"
          >
            grp3foreva
          </h1>
        </div>
        <div
          className="profile-stats"
        >
          <ul>
            <li>
              <span
                className="profile-stat-count"
              >
                0
              </span>
               posts
            </li>
            <li>
              <span
                className="profile-stat-count"
              >
                169
              </span>
               followers
            </li>
            <li>
              <span
                className="profile-stat-count"
              >
                667
              </span>
               following
            </li>
          </ul>
        </div>
      </div>
    </div>
  </header>,
  <main>
    <main>
      <div
        className="gallery"
      >
        <div>
           
          <div />
          <div />
        </div>
      </div>
    </main>
  </main>,
  ",",
]
`;
